fix display on logos and text on small screens

--- a/scripts/report/generation/stylesheets/report.css
+++ b/scripts/report/generation/stylesheets/report.css
@@ -164,11 +164,11 @@ img.mode-small {
 
 }
 
-.total td.bad-cell {
+.total .bad-cell {
     background-color: darksalmon;
 }
 
 
-.total td.good-cell {
+.total .good-cell {
     background-color: palegreen;
 }
